# FH-STECE2023

src/door/: CMakeLists.txt  input-edge-event.cpp  input-edge-event.h
src/door/analog_stuff/adc/: CMakeLists.txt
src/door/analog_stuff/sensor/: CMakeLists.txt  pressure-sensor-bmp280.cpp  pressure-sensor-bmp280.h
src/door/input_output_switch/input/: CMakeLists.txt  inputs.h
src/door/input_output_switch/output/: CMakeLists.txt
src/door/motor/: CMakeLists.txt  motor-stepper.h
src/door/statemachine/: CMakeLists.txt
src/door/utilities/: CMakeLists.txt  eventloop.h  i2c-interface.h  i2c-mock.cpp  i2c-mock.h  i2c-real.cpp  i2c-real.h  one-shot-timer.cpp  one-shot-timer.h  periodic-timer.cpp  timer-handler.cpp  timer-handler.h
tests/: CMakeLists.txt  bmp280-test.cpp  bmp280-unit-test.cpp  door-tests.cpp  hysteresis_hw_test.cpp  hysteresis_hw_test_subprocess.cpp  input-edge-event-test.cpp  input-switch-gpio-tests.cpp  inputs-tests.cpp  pressure-mock-tests.cpp  timer_test.cpp
